res/examples/invalid/infix_type_mismatch_with_identifier.eg
let a = false;

1 % a;
a % 1;

// out: TypeError: mismatched types: expected type `number` but received `bool`
// out: TypeError: mismatched types: expected type `number` but received `bool`